_sass/site.scss
//@extend-elements
%extend1 {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	font-size: 100%;
}


html {
	@extend %extend1;
}
body {
	@extend %extend1;
	font-family: $font1;
	@include font-rem($doc-font-size);
	color: $color_tuatara;
	background-color: $bodycolor;
	background-position: center center;
	background-attachment: fixed;
	@media #{$small} {
	    background-image: none !important;
		background: $white;
	}
}
* {
	box-sizing: border-box;
}
*::after {
	box-sizing: border-box;
}
*::before {
	box-sizing: border-box;
}
.header {
	height: 100%;
	position: relative;
	width: 100%;
	min-height: 300px;
	text-align: left;
	color: $white;
	@media #{$small} {
		display: block !important;
	}
	@media only screen and (max-height: 500px) {
	    display: block !important;
	}
}
.flex {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-flex: 0;
	-webkit-flex: 0 1 auto;
	-ms-flex: 0 1 auto;
	flex: 0 1 auto;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
}
.container {
	width: 36rem;
	max-width: 550px;
	padding-right: 15px;
	padding-left: 15px;
	@include center-block();
	background-color: $white;
	color: $color_shark;
	z-index: 1;
	border-radius: 3px;
	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
	@include transition(.5s);
	@media #{$small} {
		width: 92%;
		margin-top: 1rem; /* outer space above white container on mobile */
		padding-top: 1rem; /* add breathing room above avatar on mobile */
	    box-shadow: none;
	}
	@media #{$medium} {
		width: 80%;
	}
}
.row {
	margin-top: 15px;
	text-align: center;
	.title {
	    margin-top: 0;
	    margin-bottom: 5px;
	}
	@media #{$small} {
		padding: 0 1em;
	}
}
.wrapper {
	width: 75%;
	max-width: 850px;
	margin: 4rem auto;
	background: $white;
	color: $color_tuatara;
	padding: 2em;
	border-radius: 3px;
	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
	@include transition(.5s);
	@media #{$small} {
		width: 90%;
		padding: 2em 2em;
	    box-shadow: none;
	}
}
#disqus_thread {
	width: 75%;
	max-width: 850px;
	margin: -3rem auto 4rem;
	background: $white;
	color: $color_tuatara;
	padding: 2em;
	border-radius: 3px;
	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
	@include transition(.5s);
	@media #{$small} {
		width: 90%;
		padding: 2em 0;
	    box-shadow: none;
	}
}
// entry meta
.entry-meta {
	@include font-rem(12);
	text-transform: uppercase;
	color: lighten($color_tuatara,60);
	padding-left: 0;
	a {
		color: lighten($color_tuatara,60);
	}
	li {
	    list-style-type: none;
	    display: inline;
	}
	.tag {
	    display: inline-block;
        border: 1px solid;
        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
        @include rounded(3px);
        text-decoration: none;
        background-color: $white;
        color: $color_tuatara;
        @include transition(.75s);
        margin: 2px 5px;
		span {
			float: left;
			padding: 2px 6px;
		}
		.count {
			background-color: darken($white,15);
			@include border-radius(3px,3px,0,0);
		}
		&:hover {
			background-color: darken($white,15);
			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
		}
	}
}
header .entry-meta {
	display: none; // hide header meta on small screens
	@media #{$notsmall} {
		display: block;
	}
}
.entry-title a {
    text-decoration: none;
}
.entry-tags {
	display: block;
    margin-top: 1rem;
	width: 70%;
    float: left;
    text-align: left;
}
.social-share {
	display: block;
    margin-top: 1rem;
    width: 30%;
    float: right;
    text-align: right;
}

.two-col {
	max-width: 1200px;
	margin-top: 9.5rem;
	justify-content: center;
	gap: 2rem; /* space between columns */
}

.two-col__col {
	flex: 1 1 24rem; /* fluid columns; no hard 50% to avoid gap overflow math */
	min-width: 18rem;
	padding: 0 1rem; /* symmetric inner gutter */
	display: flex;
	flex-direction: column; /* stack inner panes vertically */
	align-items: stretch; /* let pane width control centering */
}

.pane {
	flex: 0 1 auto; /* size to content; avoid vertical stretching in columns */
	width: 100%;
	max-width: 65ch;
	margin: 0.5rem auto; /* center within column */
	padding: 1rem 1.5rem; /* restore inner padding */
}

.pane--accent {
	border-radius: 3px;
	box-shadow: 0 0 10px 0 rgba($color_shark,0.15);
}

.projects__content {
	flex: 1 1 26rem;
	max-width: 65ch;
}
.bg-ready {}
// Background image layer and animation
body::before {
	content: "";
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-image: var(--bg-image);
	background-repeat: var(--bg-repeat, no-repeat);
	background-size: var(--bg-size, cover);
	background-position: center center;
	background-attachment: fixed;
	z-index: -1;
	opacity: 0;
	-webkit-animation: bgFadeIn 1s ease-in forwards;
	animation: bgFadeIn 1s ease-in forwards;
}

// Sequential content fade-in (delay)
.container.animated,
.wrapper.animated {
	-webkit-animation-delay: 0.5s;
	animation-delay: 0.5s;
}
.feature {
    @include transition(.5s);
    @media #{$small} {
        background-image: none !important;
    }
    @media #{$medium} {
        color: white;
        padding: 4em;
        margin-left: -4rem;
        margin-right: -4rem;
        margin-top: -2rem;
        border-radius: 3px 3px 0 0;
        background-color: rgba($black, 0.6);
        background-blend-mode: multiply;
        background-position: center center;
    }
    @media #{$notsmall} {
        color: white;
        padding: 10em;
        margin-left: -4rem;
        margin-right: -4rem;
        margin-top: -2rem;
        border-radius: 3px 3px 0 0;
        background-color: rgba($black, 0.6);
        background-blend-mode: multiply;
        background-position: center center;
    }
}

// Background image fade-in animation
@-webkit-keyframes bgFadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes bgFadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

// Mobile fixes for background layer
@media #{$small} {
	body::before {
		background-attachment: scroll;
		height: 100vh;   // fallback
		height: 100dvh;  // better on mobile browsers
		background-position: center top;
	}
	.two-col {
		padding: 0 1rem;
	}
	.two-col__col {
		width: 100%;
		flex: 1 1 100%;
		min-width: 0;
	}
	.pane,
	.projects__content {
		flex: 1 1 auto;
		max-width: min(55ch, 100%);
		margin: 0.5rem auto;
	}
}

